# TPN-RAG-Public

./: .gitignore  ARCHITECTURE.md  EXECUTION_PLAN.md  PROGRESS_TRACKER.md  README.md  cli.py  cli_rag.py  cli_v2.py  pyproject.toml  tpn_rag.py
app/: __init__.py  config.py  data_loader.py  data_models.py  logger.py  rag_pipeline.py  simple_loader.py
app/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
app/chains/: __init__.py  agentic_rag.py  mcq_chain.py  retrieval_chain.py  tpn_prompts.py
app/core/: __init__.py  embeddings.py  retriever.py
data_viz/: CLAUDE_SONNET_DATA_ISSUE.md  generate_charts.py  open_qanda20_v2_nature_figures.py  open_qanda20_v2_report.py
eval/: EVALUATION_RESULTS.md  baseline_evaluation.py  batch_eval.py  enhanced_eval.py  enhanced_results.json  full_evaluation.ipynb  full_evaluation.py  full_evaluation_with_langchain.ipynb  generate_graphs.py  production_evaluation.py  rag_evaluation.py  rag_evaluation_v2.py  rag_metrics.py  ragas_evaluation.py  sample_eval.py  tpn_mcq_cleaned.csv
paper/: REGISTRY.md
scripts/: analyze_benchmark.py  ask_question.py  audit_kb_leakage.py  build_kb_manifests.py  check_data_leakage.py  compare_models.py  convert_calc_csv.py  convert_eval_xlsx.py  convert_takeoff41_jsonl.py  deepeval_calc_eval.py  deepeval_open_eval.py  evaluate.py  finetune_with_rag.py  ingest.py  preview_prompts.py  rechunk_documents.py  retrieve.py  run_benchmark.py  tpnctl.py  vast_bootstrap.sh  vast_run_benchmark.sh  vast_run_gpt5mini_benchmark.sh  view_results.py  vm_queue_openended_hf.sh
tests/: test_agentic_retriever.py  test_benchmark_analysis.py  test_benchmark_runner.py  test_calc_metrics.py  test_config_and_prompting.py  test_convert_calc_csv.py  test_convert_takeoff41_jsonl.py  test_data_leakage.py  test_deepeval_calc_eval_dry_run.py  test_deepeval_open_eval_dry_run.py  test_format_metrics.py  test_metrics.py  test_open_ended_prompting.py  test_statistics.py  test_structured_output.py  test_templates_and_parser.py
(+331 files in other folders)
