[project]
name = "rag-system"
version = "2.0.0"
description = "Document RAG System with Vector Search and LLM Generation"
authors = [{name = "RAG Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Data models
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # HTTP client
    "httpx>=0.28.0",
    
    # Vector storage
    "chromadb>=1.3.5",
    "numpy>=1.26.0",

    # LangChain 1.x (Dec 2025 - latest stable)
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.0",

    # LangChain Provider Integrations (1.x) - NO OLLAMA
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-huggingface>=1.2.0",
    
    # Advanced retrieval
    "sentence-transformers>=3.3.0",
    "rank-bm25>=0.2.2",
    
    # CLI and utilities
    "typer>=0.15.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    
    # LLM providers (direct APIs)
    "openai>=1.58.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.40.0",
    
    # Evaluation
    "pandas>=2.2.0",
    "ragas>=0.2.10",
    "deepeval>=2.0.0",
    "datasets>=3.2.0",

    # Metrics (BLEU, ROUGE)
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    
    # PDF Processing (for books and clinical documents)
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rag = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I"]
